define RegisterModel and LoginModel

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=userstoredb;Trusted_Conntection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
